objects/CalloutSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Customer_Key__c</fullName>
        <label>Customer Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Secret_Key__c</fullName>
        <label>Customer Secret Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Instance__c</fullName>
        <label>Salesforce Instance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CalloutSettings</label>
</CustomObject>